compiling che